Fixes for z-index heights for nav

--- a/app/webpacker/stylesheets/base/layout.scss
+++ b/app/webpacker/stylesheets/base/layout.scss
@@ -22,7 +22,6 @@ body {
 	main {
 		margin-bottom: 2rem;
 		position: relative;
-		z-index: 1;
 		.static_pages_controller.home_page & {
 			margin-bottom: 0;
 		}
