--- a/app/webpacker/stylesheets/modules/content_rich.scss
+++ b/app/webpacker/stylesheets/modules/content_rich.scss
@@ -42,7 +42,6 @@
 	align-items: flex-end;
 	justify-content: space-between;
 	position: fixed;
-	z-index: 1;
 	top: 0;
 	@media (max-width: 960px) {
 		min-height: 31vw;
